--- a/style.css
+++ b/style.css
@@ -1,30 +1,27 @@
 /* (A) ENTIRE PAGE */
-body{
-    display: flex;justify-content: center;margin-top: 50px;
-}
-<<<<<<< HEAD
+body{display: flex;flex-direction: column;justify-content: center;align-items: center;margin-top: 50px;background: linear-gradient(140deg,#83e9f4 ,#fb6f6f);}
 #cal-wrap * { font-family: arial, sans-serif;}
-=======
-#cal-wrap * { font-family: arial, sans-serif; j}
->>>>>>> 24145ec748a6c36b5f403f061f1c7af78417939b
 .ninja { display: none !important; }
 
 /* (B) CONTAINER */
 #cal-wrap { max-width: 600px; }
 
 /* (C) PERIOD SELECTOR */
-#cal-date { display: flex; }
+#cal-date { display: flex;background-color: rgba(92, 217, 248, 0.437);box-shadow: 5px 5px #000;}
+select{background-color: rgba(181, 238, 253, 0.437);}
 #cal-mth, #cal-yr {
   box-sizing: border-box;
   padding: 10px 20px;
   font-size: 1.2em;
   border: 0;
+  
 }
 
 /* (D) CALENDAR */
 #calendar {
   width: 100%;
   border-collapse: collapse;
+  box-shadow: 5px 5px #333;
 }
 #calendar tr.head td {
   font-weight: bold;
@@ -35,10 +32,11 @@ body{
   text-align: center;
 }
 #calendar tr.day td {
-  border: 1px solid #ddd;
+  border: 1px solid rgb(0, 0, 0);
   width: 14.28%;
   padding: 15px 5px;
   vertical-align: top;
+  background-color: rgb(101, 241, 230);
 }
 #calendar tr.day td:hover {
   background: #fff9e4;
