--- a/style.css
+++ b/style.css
@@ -1,15 +1,10 @@
 /* (A) ENTIRE PAGE */
-body{display: flex;flex-direction: column;justify-content: center;align-items: center;margin-top: 50px;background: linear-gradient(140deg,#83e9f4 ,#fb6f6f);
-background-image: url("cal.jpg"); background-size: 100% 100%;background-repeat: no-repeat;background-position: center;}
+/* body{display: flex;flex-direction: column;justify-content: center;align-items: center;} */
+nav{
+  width:100%;
+}
 #cal-wrap * { font-family: arial, sans-serif;}
 .ninja { display: none !important; }
-.container{
-  font-family: 'Courier New', Courier, monospace;color: rgb(0, 110, 255);text-shadow:3px 3px #000;font-size: xx-large;
-  width: 100%;
-  position: relative;
-  bottom: 15px;
-  opacity: 0.5;
-}
 
 /* (B) CONTAINER */
 #cal-wrap { max-width: 600px; margin: auto;margin-bottom: 20px;}
@@ -112,10 +107,10 @@ select{background-color: rgba(141, 230, 255, 0.876);box-shadow: 5px 5px #000;}
 /*(F) Footer*/
 #footer{
   font-family: 'Courier New', Courier, monospace;
-  margin: auto;
   text-align:center;
   width: 100%;
-  color:whitesmoke;
-  background-color: black;
-  padding: 5px;
+  color:rgb(248, 0, 0);
+  opacity: 0.7;
+  position:relative;
+  bottom: -5px;
 }
