--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,7 @@ select{background-color: rgba(141, 230, 255, 0.876);box-shadow: 5px 5px #000;}
   padding: 15px 5px;
   vertical-align: top;
   background-color: yellow;
+  opacity: 0.9;
   border-radius: 10%;
   margin: auto;
 }
