--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Calendar</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="style.css" rel="stylesheet">
-    <script async src="script.js"></script>
+    <link href="{{url_for('static',filename='/css/style.css') }}" rel="stylesheet">
+    <script src="{{url_for('static',filename='/js/script.js') }}"></script>
     <script src="https://kit.fontawesome.com/2dfc32c7e6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
@@ -47,9 +47,31 @@
         <textarea id="evt-details" required></textarea>
         <input id="evt-close" type="button" value="Close"/>
         <input id="evt-del" type="button" value="Delete"/>
-        <input id="evt-save" type="submit" value="Save"/>
+        <input id="evt-save" type="submit" value="Save" onclick="ToPython();"/>
       </form>
     </div>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+<script>
+    function ToPython() {
+
+        const date = document.getElementById("evt-date").value;
+        const det = document.getElementById("evt-details").value;
+
+
+        const dict_values = {date, det} //Pass the javascript variables to a dictionary.
+        const s = JSON.stringify(dict_values); // Stringify converts a JavaScript object or value to a JSON string
+        console.log(s); // Prints the variables to console window, which are in the JSON format
+        window.alert(s)
+        $.ajax({
+            url:"/test",
+            type:"POST",
+            contentType: "application/json",
+            data: JSON.stringify(s)
+          });
+
+}
+
+</script>
   </body>
   
 </html>
